--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -32,6 +32,18 @@ body {
 	}
 }
 
+.purple-text {
+	color: $purple!important
+}
+
+.pink-text {
+	color: $pink!important
+}
+
+.cyan-text {
+	color: #00a3e3!important
+}
+
 .h1, h1 {
 	font-size: 22px;
 	margin: 0 0 20px;
@@ -65,6 +77,10 @@ body {
 
 .text-center {
 	text-align: center;
+	.button {
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
 
 .img-responsive {
@@ -117,6 +133,22 @@ input[type='submit'] {
 	}
 }
 
+.bg-purple {
+	background-color: $purple;
+}
+
+.bg-pink {
+	background-color: $pink;
+}
+
+.bg-orange {
+	background-color: $orange;
+}
+
+.bg-yellow {
+	background-color: $yellow;
+}
+
 .header {
 	background: #2f2f2f url(../img/icons/layout-sprite.png) 0 -284px;
 	height: 76px;
@@ -151,6 +183,13 @@ input[type='submit'] {
 		margin: 0;
 		padding: 0;
 		list-style: none;
+		> li {
+			&.current {
+				> a {
+					color: $accent;
+				}
+			}
+		}
 	}
 	> ul {
 		height: 100%;
@@ -239,6 +278,7 @@ input[type='submit'] {
 	li {
 		height: 100%;
 	}
+
 }
 
 .header-right {
@@ -342,15 +382,30 @@ input[type='submit'] {
 	background-repeat: no-repeat;
 	background-position: center center;
 	font-size: 0;
-	&_phone {
-		background-image: url(../img/icons/phone.png);
-		width: 13px;
-		height: 13px;
-	}
 	&_lock {
 		background: url(../img/icons/layout-sprite_2.png) 50% -10px;
 		width: 15px;
 		height: 16px;
+	}
+	&_star {
+		background: url(../img/icons/promo-features-icons.png) 0px 0px no-repeat;
+		width: 26px;
+		height: 25px;
+	}
+	&_folder {
+		background: url(../img/icons/promo-features-icons.png) -235px 0px no-repeat;
+		width: 32px;
+		height: 25px;
+	}
+	&_rubli {
+		background: url(../img/icons/promo-features-icons.png) -470px 0px no-repeat;
+		width: 29px;
+		height: 27px;
+	}
+	&_upload {
+		background: url(../img/icons/promo-features-icons.png) -710px 0px no-repeat;
+		width: 25px;
+		height: 27px;
 	}
 	&_car {
 		background-image: url(../img/icons/car.png);
@@ -601,7 +656,7 @@ input[type='submit'] {
 		ul {
 			background-color: #ff6900;
 			ul {
-				background-color: $orange;
+				background-color: $yellow;
 			}
 		}
 	}
@@ -610,6 +665,42 @@ input[type='submit'] {
 .mobile-menu-loaded {
 	.mobile-menu {
 		height: 100vh;
+	}
+}
+
+.check-list {
+	margin: 0;
+	padding-right: 30px;
+	font-size: 15px;
+	line-height: 26px;
+	list-style: none;
+	position: relative;
+	li {
+		position: relative;
+		&::before {
+			content: '';
+			display: inline-block;
+			background: url('../img/icons/check.png') no-repeat center center;
+			width: 15px;
+			height: 12px;
+			z-index: 1;
+			background-size: contain;
+			position: absolute;
+			left: -30px;
+			top: 8px;
+		}
+	}
+	&_purple {
+		font-size: 12px;
+		li {
+			margin-bottom: 10px;
+			&::before {
+				top: 4px;
+				width: 18px;
+				height: 18px;
+				background-image: url(../img/icons/check-purple.png);
+			}
+		}
 	}
 }
 
@@ -649,31 +740,6 @@ input[type='submit'] {
 		background-color: rgba(0,0,0,.6);
 		width: 390px;
 		padding: 50px 40px 110px;
-		ul {
-			margin: 0;
-			padding-right: 30px;
-			font-size: 15px;
-			line-height: 26px;
-			list-style: none;
-			position: relative;
-		}
-		li {
-			position: relative;
-			&::before {
-				content: '';
-				display: inline-block;
-				*display: inline;
-				*zoom: 1;
-				background: url('../img/icons/check.png') no-repeat center center;
-				width: 15px;
-				height: 12px;
-				z-index: 1;
-				background-size: contain;
-				position: absolute;
-				left: -30px;
-				top: 8px;
-			}
-		}
 	}
 	&__header {
 		font-size: 55px;
@@ -733,11 +799,86 @@ input[type='submit'] {
 		&:hover {
 			background-color: #ff6e00;	
 		}
+		&-shade {
+			color: #004600;	
+			text-shadow: 0 1px 0 #ceec99;
+			background: rgb(100,182,0);
+			background: linear-gradient(0deg, rgba(100,182,0,1) 0%, rgba(153,217,81,1) 100%);
+			transition: all 300ms ease, color 200ms ease-in;
+			&:hover {
+				color: #0d720d;
+				background: rgb(100,209,0);
+				background: linear-gradient(0deg, rgba(115,209,0,1) 0%, rgba(159,232,78,1) 100%);
+				
+			}
+			&:focus {
+				background: rgb(115,209,0);
+				background: linear-gradient(180deg, rgba(115,209,0,1) 0%, rgba(159,232,78,1) 100%);				
+			}
+		}
 	}
 	&_orange {
-		background-color: $orange;
+		background-color: $yellow;
 		&:hover {
 			background-color: #ff6e00;	
+		}
+		&-grad {
+			background: rgb(255,103,0);
+			background: linear-gradient(0deg, rgba(255,103,0,1) 0%, rgba(224,127,61,1) 49%, rgba(244,152,90,1) 50%, rgba(255,209,176,1) 100%);
+			color: #fff;
+			font-weight: bold;
+			text-shadow: 1px 1px 1px #333;
+			border: 1px solid rgba(255,103,0,1);
+			box-shadow: 0 0 15px rgba(255,103,0,.7);
+			transition: box-shadow 200ms ease;
+			&:hover {
+				background: rgb(255,80,0);
+				background: linear-gradient(0deg, rgba(255,70,0,1) 0%, rgba(224,127,61,1) 49%, rgba(244,145,70,1) 50%, rgba(255,209,176,1) 100%);
+				box-shadow: 0 0 15px rgba(255,103,0,1);
+			}
+			&:focus {
+				background: rgb(255,90,0);
+				background: linear-gradient(0deg, rgba(255,130,0,1) 0%, rgba(224,157,61,1) 49%, rgba(244,165,70,1) 50%, rgba(255,209,196,1) 100%);
+			}
+		}
+	}
+	&_pink {
+		&-grad {
+			background: rgb(214,47,150);
+			background: linear-gradient(0deg, rgba(214,47,150,1) 0%, rgba(224,66,164,1) 49%, rgba(236,175,213,1) 50%, rgba(234,172,211,1) 100%);
+			color: #fff;
+			font-weight: bold;
+			text-shadow: 1px 1px 1px #333;
+			border: 1px solid rgba(255,103,0,1);
+			box-shadow: 0 0 15px rgba(214,67,180,.7);
+			transition: box-shadow 200ms ease;
+			&:hover {
+				background: rgb(214,67,150);
+				background: linear-gradient(0deg, rgba(214,67,180,1) 0%, rgba(224,66,164,1) 49%, rgba(236,175,213,1) 50%, rgba(234,185,211,1) 100%);
+				box-shadow: 0 0 15px rgba(214,67,180,1);
+			}
+			&:focus {
+				background: rgb(214,67,150);
+				background: linear-gradient(0deg, rgba(214,87,180,1) 0%, rgba(224,96,164,1) 49%, rgba(236,195,213,1) 50%, rgba(234,205,211,1) 100%);
+			}
+		}
+	}
+	&_grey {
+		background: rgb(255,255,255);
+		background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(216,216,216,1) 100%);
+		color: $purple;
+		font-weight: bold;
+		font-size: 15px;
+		border: 1px solid #cccccc;
+		text-shadow: 0 1px 0 #fff;
+		&:hover {
+			background: rgb(200,200,200);
+			background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(216,216,216,1) 100%);
+			color: $purple;
+		}
+		&:focus {
+			background: rgb(180,180,180);
+			background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(230,230,230,1) 100%);
 		}
 	}
 }
@@ -812,7 +953,7 @@ input[type='submit'] {
 			line-height: 60px;
 			transition: all .3s ease;
 			vertical-align: middle;
-			background-color: $orange;
+			background-color: $yellow;
 			text-align: center;
 			font-weight: 700;
 			color: #fff;
@@ -898,7 +1039,7 @@ input[type='submit'] {
 		border-radius: 2px;
 		background-clip: padding-box;
 		transition: background-color .3s ease;
-		background-color: $orange;
+		background-color: $yellow;
 		padding: 0 15px;
 		margin-bottom: 20px;
 		max-width: 160px;
@@ -939,12 +1080,12 @@ input[type='submit'] {
 		padding-right: 30px;
 		padding-left: 30px;
 		cursor: pointer;
-		border: 2px solid $orange;
+		border: 2px solid $yellow;
 		background-color: #fff;
 		font-size: 16px;
 		transition: background-color 200ms ease, color 200ms ease;
 		&:hover {
-			background-color: $orange;
+			background-color: $yellow;
 			color: #fff;
 		}
 	}
@@ -981,7 +1122,7 @@ input[type='submit'] {
 	flex-basis: 35px;
 	flex-shrink: 0;
 	height: 35px;
-	background-color: $orange;
+	background-color: $yellow;
 	border-radius: 100%;
 	color: #fff;
 	font-size: 22px;
@@ -1332,7 +1473,7 @@ input[type='submit'] {
 		}
 		&:hover {
 			path {
-				fill: $orange;
+				fill: $yellow;
 			}
 		}
 	}
@@ -1344,6 +1485,387 @@ input[type='submit'] {
 	color: #fff;
 	background: linear-gradient(90deg, rgba(102,102,102,1) 0%, rgba(167,167,167,1) 100%);
 	margin-bottom: 40px;
+}
+
+.big-title {
+	font-size: 38px;	
+	color: #fff;	
+	font-weight: normal;
+	b {
+		font-size: 80px;	
+		font-weight: bold;
+		line-height: 1;	
+	}
+}
+
+.promo {
+	border: 8px solid #ffffff;
+	box-shadow: 0 0 10px rgba(0,0,0,.1);
+	&__text {
+		font-size: 13px;
+		.check-list {
+			font-size: 13px;	
+		}
+	}
+	&__slide {
+		position: relative;
+		height: 430px;
+		padding: 40px;
+		.button {
+			margin-top: 30px;	
+		}
+	}
+	&__content {
+		position: relative;
+		z-index: 1;	
+		color: #fff;	
+		max-width: 510px;	
+	}
+	&__image {
+		position: absolute;
+		top: 0;	
+		left: 0;	
+		width: 100%;
+		height: 100%;	
+		z-index: 0;	
+		img {
+			@include fill-img(cover);
+		}
+	}
+}
+
+.promo-features {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 8px;
+	&__item {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		padding: 15px;
+		color: #fff;
+		max-width: 225px;
+		width: 100%;
+		&.bg-yellow {
+			color: #70482e;
+		}
+	}
+	.icon {
+		flex-shrink: 0;
+		margin-right: 10px;
+	}
+	&__header {
+		display: flex;
+		align-items: center;
+		justify-content: flex-start;
+		margin-bottom: 10px;
+	}
+	&__title {
+		font-size: 24px;
+		line-height: 24px;
+	}
+	.button {
+		margin-top: 15px;
+	}
+}
+
+.discount-form {
+	background-color: $pink;
+	color: #fff;
+	padding: 15px;
+	&__text {
+		font-size: 20px;
+		b {
+			color: #ffea01;
+		}
+	}
+	input[type="text"] {
+		font-size: 20px;
+	}
+	.button {
+		height: auto;
+		color: #666666;
+	}
+}
+
+.seo-text {
+	color: #666;
+	h1 {
+		color: #666;
+		margin-bottom: 15px;
+		font-size: 26px;
+	}
+	h2 {
+		color: $purple;
+		margin-bottom: 10px;
+		font-size: 20px;
+	}
+	p {
+		margin-bottom: 10px;
+	}
+	ul {
+		padding-left: 20px;
+		list-style-type: disc;
+	}
+	ul.check-list {
+		padding-left: 30px;
+		list-style-type: none;
+	}
+}
+
+.head-inset {
+	margin-top: -30px;
+	z-index: -1;
+}
+
+.purple-header {
+	color: $purple;
+	font-size: 26px;
+	font-weight: bold;
+	margin-bottom: 15px;
+	&_medium {
+		font-size: 17px;
+	}
+}
+
+.accordeon {
+	&__panel {
+		width: 100%;
+	}
+	&__header {
+		display: block;
+		user-select: none;
+		margin-top: -1px; //fix border
+		padding-top: 10px;
+		padding-bottom: 10px;
+		width: 100%;
+		align-items: center;
+		padding-right: 20px;
+		padding-left: 20px;
+		background: linear-gradient(top, #ffffff, #d8d8d8);
+		border: 1px solid #cccccc;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		text-shadow: 0 1px 0 #fff;
+		font-weight: bold;
+		color: #666;
+		cursor: pointer;
+		&.active {
+			color: $purple;
+			&:before {
+				content: '-'
+			}
+		}
+		&:before {
+			content: '+';
+			margin-right: 5px;
+		}
+	}
+	&__content {
+		display: flex;
+		padding: 20px;
+		justify-content: space-between;
+		align-items: flex-start;
+		background-color: #F6F6F6;
+		color: #666;
+		height: auto;
+		&-outer {
+			display: none;
+			&.show {
+				display: flex;
+			}
+		}
+	}
+	&__image {
+		overflow: hidden;
+		border-radius: 50%;
+		width: 100px;
+		flex-basis: 100px;
+		flex-shrink: 0;
+		img {
+			@include fill-img(cover);
+		}
+	}
+}
+
+.tabs-outer {}
+.tabs-header {
+	display: flex;
+	justify-content: space-between;
+	&__item {
+		user-select: none;
+		cursor: pointer;
+		background: linear-gradient(top, white, #D8D8D8);
+		flex-grow: 1;
+    border: 1px solid #CCC;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+		text-align: center;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		max-width: 95px;
+		line-height: 1;
+		font-weight: bold;
+		text-shadow: 0 1px 0 white;
+		margin-bottom: 10px;
+		z-index: 1;
+		transition: all 300ms ease;
+		&.active {
+			background: #F6F6F6;
+			border-bottom: 0;
+			margin-bottom: 0;
+			color: $purple;
+		}
+	}
+}
+.tabs-content {
+	background-color: #F6F6F6;
+	border: 1px solid gainsboro;
+	margin-top: -1px;
+	z-index: 0;
+	padding: 15px;
+	&__inner {
+		display: none;
+		&.show {
+			display: block;
+		}
+	}
+}
+
+.flex-table {
+	display: flex;
+	flex-direction: column;
+	color: #666;
+	&_price {
+		font-weight: bold;
+	}
+	&__row {
+		display: flex;
+		justify-content: space-between;
+		padding-top: 8px;
+		padding-bottom: 8px;
+		&:nth-child(2n) {
+			background-color: #fff;
+		}
+		&:hover {
+			background-color: #ededed;
+		}
+	}
+	&__col {
+		min-width: 60px;
+		margin-right: 5px;
+		margin-left: 5px;
+		.pink-text {
+			text-align: center;
+		}
+		.grey-text {
+			font-weight: normal;
+			color: #999;
+		}
+	}
+}
+
+.dropdown {
+	border-top: 1px solid gainsboro;
+	&_closed {
+		.dropdown__header::before {
+			transform: rotate(0deg)
+		}
+		.dropdown__content {
+			display: none;
+		}
+	}
+	&__header {
+		cursor: pointer;
+		width: 100%;
+		padding: 15px 8px;
+		&:before {
+			content: '';
+			display: inline-block;
+			background-image: url(../img/icons/gray-down_arrow.gif);
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: contain;
+			width: 14px;
+			height: 9px;
+			margin-right: 10px;
+			vertical-align: middle;
+			transform: rotate(180deg);
+			transition: transform 200ms ease-in;
+		}
+	}
+	&__content {
+		display: flex;
+		flex-wrap: wrap;	
+		justify-content: space-between;
+	}
+	&__button {
+		display: flex;
+		text-align: center;
+		vertical-align: middle;
+		width: calc(50% - 10px);
+		color: #888;
+		background-color: #ececec;
+		padding-right: 10px;
+		padding-left: 10px;
+		&:hover {
+			color: #555;
+			text-decoration: none;
+		}
+		span {
+			margin: auto;
+		}
+	}
+	&__link {
+		margin-top: 10px;
+		flex-basis: 100%;
+		width: 100%;
+	}
+}
+
+.three-steps {
+	padding: 0;
+	margin: 0;
+	list-style-type: none;
+	li {
+		position: relative;
+		padding-left: 40px;
+		margin-bottom: 20px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+		&:before {
+			color: #ccc;
+			text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
+			position: absolute;
+			content: '1';
+			left: -5px;
+			top: 0px;
+			font-size: 55px;
+			line-height: 1;
+			font-weight: bold;
+			text-decoration: none;
+		}
+		&:nth-child(2) {
+			&:before {
+				content: '2';
+			}
+		}
+		&:nth-child(3) {
+			&:before {
+				content: '3';
+			}
+		}
+	}
+	&__title {
+		font-weight: bold;
+		margin-bottom: 10px;
+	}
 }
 
 @import "media"; // Always at the end
