--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -2,3 +2,4 @@
 
 @include font-face("PT Sans", "../fonts/PTSans/PT_Sans-Web-Regular");
 @include font-face("PT Sans", "../fonts/PTSans/PT_Sans-Web-Bold", bold);
+@include font-face("BebasNeueBold", "../fonts/BebasNeue/bebas_neue_bold");
