--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -4,6 +4,9 @@ $orange: #ff6e00;
 $purple: #9a35ad;
 $pink: #d80c8c;
 $yellow: #ffb800;
+$red: #e31235;
+$green: #7cc900;
+$white: #fff;
 $text: #333;
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
