--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -11,6 +11,24 @@
 }
 // ≥1220px
 @include media-breakpoint-down(lg) {
+	.stamps-catalog {
+		justify-content: space-around;
+	}
+	.promo-features {
+		&__item {
+			max-width: 440px;
+			text-align: center;
+			&_wide {
+				text-align: left;
+			}
+			&_image {
+				max-width: 290px;
+			}
+		}
+	}
+	.catalog-item {
+		max-width: 300px;
+	}
 	.reviews-table__item {
 		max-width: 200px;
 	}
@@ -27,6 +45,43 @@
 
 // ≥985px
 @include media-breakpoint-down(md) {
+	.promo-features {
+		&__item {
+			&_wide {
+				text-align: center;
+				flex-direction: column;
+				.promo-features__title {
+					flex-basis: auto;
+				}
+				.promo-features__description {
+					max-width: 100%;
+					margin-left: 0;
+					margin-right: 0;
+				}
+			}
+		}
+	}
+	.promo-header {
+		padding-top: 40px;
+	}
+	.promo-title {
+		&__number {
+			font-size: 180px;
+			line-height: 135px;
+		}
+		&__item {
+			font-size: 95px;
+			&_green {
+				font-size: 40px;
+			}
+		}
+	}
+	.catalog-items-outer {
+		justify-content: space-around;
+	}
+	.catalog-item {
+		margin-bottom: 20px;
+	}
 	
 	.promo {
 		&__slide {
@@ -37,6 +92,11 @@
 			max-width: 100%;
 			padding: 30px;
 			background-color: rgba(0,0,0,.4);
+		}
+		&_dark {
+			.promo__content {
+				background-color: rgba(255,255,255,.4);
+			}
 		}
 	}
 	.promo-features {
@@ -118,6 +178,48 @@
 
 // ≥768px
 @include media-breakpoint-down(sm) {
+	.stamps-catalog {
+		&__item {
+			&_wide {
+				max-width: 100%;
+			}
+		}
+	}
+	.promo-features {
+		&__item_full {
+			&::after {
+				z-index: 0;
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				background-color: rgba(0,0,0,.25);
+				content: '';
+				left: 0;
+				top: 0;
+			}
+		}
+	}
+	.promo-header {
+		background-size: cover;
+	}
+	.promo-title {
+		text-align: center;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	.catalog-item {
+		max-width: calc(50% - 5px);
+	}
+	.hero-box {
+		height: auto;
+		&__title {
+			font-size: 24px;
+		}
+		&__text {
+			background-color: rgba(255,255,255,.7);
+		}
+	}
 	.tabs-header__item {
 		max-width: 100%;
 		margin-right: 10px;
@@ -181,7 +283,7 @@
 	.order-step-next {
 		display: none;
 	}
-	.main-slider {
+	.main-slider-item {
 		height: auto;
 		&__item {
 			height: auto;
@@ -215,6 +317,27 @@
 
 // ≥576px
 @include media-breakpoint-down(xs) {
+	.stamps-catalog {
+		&__header {
+			font-size: 10px;
+		}
+	}
+	.button_arrow {
+		min-width: 300px;
+	}
+	.promo-title {
+		&__number {
+			font-size: 100px;
+			line-height: 1;
+			letter-spacing: 0;
+		}
+		&__item {
+			font-size: 60px;
+		}
+	}
+	.catalog-item {
+		max-width: 320px;
+	}
 
 	.section-presentation-buttons {
 		.button {
@@ -233,6 +356,9 @@
 				margin-bottom: 10px;
 			}
 		}
+		&__arrow {
+			display: none;
+		}
 		.button {
 			width: 100%;
 		}
@@ -241,6 +367,7 @@
 		width: auto;
 		padding-right: -20px;
 		padding-left: -20px;
+		font-size: 16px;
 	}
 	.big-title {
 		font-size: 30px;
@@ -282,7 +409,7 @@
 			height: 40px;	
 		}
 	}
-	.main-slider {
+	.main-slider-item {
 		.button {
 			position: static;
 			margin-top: 15px;	
