--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -59,7 +59,7 @@ body {
 }
 
 .h3, h3 {
-	font-size: 16px;
+	font-size: 20px;
 	margin: 0 0 10px;
 	font-weight: 700;
 }
@@ -135,18 +135,64 @@ input[type='submit'] {
 
 .bg-purple {
 	background-color: $purple;
+	.promo-features__price {
+		background-color: $purple;
+	}
+	.promo-features__arrow {
+		color: $purple;
+	}
 }
 
 .bg-pink {
 	background-color: $pink;
+	.promo-features__price {
+		background-color: $pink;
+	}
+	.promo-features__arrow {
+		color: $pink;
+	}
+}
+
+.bg-white {
+	background-color: $white;
+	color: $text!important;
+	.promo-features__price {
+		background-color: $white;
+	}
+	.promo-features__arrow {
+		color: $white;
+		color: $text!important;	
+	}
 }
 
 .bg-orange {
 	background-color: $orange;
+	.promo-features__price {
+		background-color: $orange;
+	}
+	.promo-features__arrow {
+		color: $orange;
+	}
 }
 
 .bg-yellow {
 	background-color: $yellow;
+	.promo-features__price {
+		background-color: $yellow;
+	}
+	.promo-features__arrow {
+		color: $yellow;
+	}
+}
+
+.bg-green {
+	background-color: $green;
+	.promo-features__price {
+		background-color: $green;
+	}
+	.promo-features__arrow {
+		color: $green;
+	}
 }
 
 .header {
@@ -382,6 +428,31 @@ input[type='submit'] {
 	background-repeat: no-repeat;
 	background-position: center center;
 	font-size: 0;
+	&_a5 {
+		background: url(../img/icons/promo-features-icons-list.png) -16px -5px;
+		width: 32px;
+		height: 47px;
+	}
+	&_a6 {
+		background: url(../img/icons/promo-features-icons-list.png) -250px -5px;
+		width: 32px;
+		height: 47px;
+	}
+	&_a43 {
+		background: url(../img/icons/promo-features-icons-list.png) -485px -5px;
+		width: 32px;
+		height: 47px;
+	}
+	&_a4 {
+		background-image: url(../img/icons/a4.png);
+		width: 32px;
+		height: 47px;
+	}
+	&_pamphlet {
+		background: url(../img/icons/promo-features-icons-list.png) -727px -5px;
+		width: 42px;
+		height: 47px;
+	}
 	&_lock {
 		background: url(../img/icons/layout-sprite_2.png) 50% -10px;
 		width: 15px;
@@ -511,6 +582,21 @@ input[type='submit'] {
 		background-image: url(../img/icons/smile-round.png);
 		width: 49px;
 		height: 49px;
+	}
+	&_tshirt-women {
+		background-image: url(../img/icons/tshirt-women.png);
+		width: 38px;
+		height: 38px;
+	}
+	&_tshirt-man {
+		background-image: url(../img/icons/tshirt-man.png);
+		width: 38px;
+		height: 38px;
+	}
+	&_hoodie {
+		background-image: url(../img/icons/hoodie.png);
+		width: 38px;
+		height: 38px;
 	}
 
 }
@@ -702,6 +788,16 @@ input[type='submit'] {
 			}
 		}
 	}
+	&_red {
+		li {
+			&::before {
+				top: 8px;
+				width: 19px;
+				height: 15px;
+				background-image: url(../img/icons/check-red.png);
+			}
+		}
+	}
 }
 
 .main-slider {
@@ -726,49 +822,50 @@ input[type='submit'] {
 		margin-right: 10px;	
 		margin-left: 10px;	
 	}
-	&__item {
+	&-item {
 		color: #fff;
 		position: relative;
 		height: 407px;
-	}
-	&__text {
-		position: absolute;
-		top: 50%;	
-		transform: translateY(-50%);
-		left: -10px;	
-		z-index: 2;
-		background-color: rgba(0,0,0,.6);
-		width: 390px;
-		padding: 50px 40px 110px;
-	}
-	&__header {
-		font-size: 55px;
-		line-height: 1;
-		font-weight: 400;
-		margin: 0 0 17px;
-		text-transform: uppercase
-	}
-	&__subhead {
-		font-size: 22px;
-		line-height: 1;
-		margin-bottom: 25px;
-	}
-	&__image {
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		z-index: 1;
-		img {
-			@include fill-img(cover);
+		&__text {
+			position: absolute;
+			top: 50%;	
+			transform: translateY(-50%);
+			left: -10px;	
+			z-index: 2;
+			background-color: rgba(0,0,0,.6);
+			max-width: 390px;
+			width: 100%;
+			padding: 50px 40px 110px;
 		}
-	}
-	.button {
-		position: absolute;
-		bottom: 35px;
-		left: 45px;	
+		&__header {
+			font-size: 55px;
+			line-height: 1;
+			font-weight: 400;
+			margin: 0 0 17px;
+			text-transform: uppercase
+		}
+		&__subhead {
+			font-size: 22px;
+			line-height: 1;
+			margin-bottom: 25px;
+		}
+		&__image {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			z-index: 1;
+			img {
+				@include fill-img(cover);
+			}
+		}
+		.button {
+			position: absolute;
+			bottom: 35px;
+			left: 45px;	
+		}
 	}
 }
 
@@ -881,6 +978,59 @@ input[type='submit'] {
 			background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(230,230,230,1) 100%);
 		}
 	}
+	&_arrow {
+		min-width: 340px;
+		display: flex;
+		text-align: center;
+		height: 70px;	
+		font-size: 23px;
+		span {
+			background-color: $red;	
+			height: 100%;
+			width: 100%;	
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			padding-right: 20px;	
+			padding-left: 20px;	
+			border-bottom: 2px solid darken($red, 12%);
+			transition: background-color 180ms linear;
+		}
+		&:after {
+			content: "";
+			width: 0;
+			height: 0;
+			border-top: 35px solid transparent;
+			border-left: 35px solid $red;
+			border-bottom: 35px solid transparent;
+			transition: border-left-color 180ms linear;
+		}
+		&:hover {
+			span {
+				background-color: lighten($red, 10%);
+			}
+			&:after {
+				border-left-color: lighten($red, 10%);
+			}
+		}
+		&-green {
+			span {
+				background-color: #90bf01;
+				border-bottom-color: darken(#90bf01, 12%);
+			}
+			&:after {
+				border-left-color: #90bf01;
+			}
+			&:hover {
+				span {
+					background-color: lighten(#90bf01, 5%);
+				}
+				&:after {
+					border-left-color: lighten(#90bf01, 5%);
+				}
+			}
+		}
+	}
 }
 
 .white-wrap {
@@ -888,6 +1038,10 @@ input[type='submit'] {
 	background-color: #fff;
 	&_padding {
 		padding: 30px;	
+	}
+	&_border {
+		border: 8px solid #fff;
+		box-shadow: 0 0 10px rbga(0,0,0,.2)
 	}
 }
 
@@ -899,6 +1053,10 @@ input[type='submit'] {
 
 .spacing-bottom {
 	margin-bottom: 40px;	
+}
+
+.spacing-bottom-small {
+	margin-bottom: 15px;	
 }
 
 .catalog {
@@ -1501,6 +1659,19 @@ input[type='submit'] {
 .promo {
 	border: 8px solid #ffffff;
 	box-shadow: 0 0 10px rgba(0,0,0,.1);
+	&_dark {
+		color: $text;
+		.check-list li {
+			margin-bottom: 0;
+			line-height: 1.7;
+		}
+		.promo__content {
+			color: $text;
+		}
+		.big-title {
+			color: $purple;
+		}
+	}
 	&__text {
 		font-size: 13px;
 		.check-list {
@@ -1536,8 +1707,8 @@ input[type='submit'] {
 
 .promo-features {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
-	margin-top: 8px;
 	&__item {
 		display: flex;
 		flex-direction: column;
@@ -1547,8 +1718,85 @@ input[type='submit'] {
 		color: #fff;
 		max-width: 225px;
 		width: 100%;
+		margin-top: 8px;
+		position: relative;
+		&:hover {
+			color: #fff;
+			text-decoration: none;
+			opacity: .9;
+		}
+		&_new {
+			position: relative;
+			&:before {
+				content: 'Новинка!';
+				position: absolute;
+				top: 0;
+				right: 0;
+				height: 15px;
+				background-color: $red;
+				color: #fff;
+				font-size: 11px;
+				line-height: 15px;
+				padding-right: 10px;
+				padding-left: 10px;
+				border-bottom-left-radius: 8px;
+			}
+		}
+		&_image {
+			padding: 0;
+			.promo-features__header {
+				padding: 10px;
+			}
+			&.promo-features__item.bg-yellow {
+				color: #fff;
+			}
+		}
 		&.bg-yellow {
 			color: #70482e;
+		}
+		&_wide {
+			max-width: 460px;
+			flex-direction: row;
+			.promo-features__title {
+				flex-basis: 150px;
+				flex-shrink: 0;
+			}
+			.promo-features__description {
+				max-width: 150px;
+				margin-right: 20px;
+				margin-left: 20px;
+			}
+		}
+		&_full {
+			max-width: 100%!important;
+			flex-direction: row;
+			justify-content: space-between;
+			padding: 5px;
+			.promo-features__image {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+				z-index: 0;
+				img {
+					object-fit: contain;
+				}
+			}
+			.promo-features__header {
+				margin-bottom: 0;
+				z-index: 1;
+			}
+			.promo-features__price {
+				z-index: 1;
+			}
+			&::before {
+				z-index: 1;
+			}
+		}
+		&_medium {
+			max-width: 305px;
+			text-align: center;
 		}
 	}
 	.icon {
@@ -1560,13 +1808,64 @@ input[type='submit'] {
 		align-items: center;
 		justify-content: flex-start;
 		margin-bottom: 10px;
+		width: 100%;
+		justify-content: space-between;
+	}
+	&__arrow {
+		width: 24px;
+		height: 24px;
+		background-color: #fff;
+		color: $purple;
+		text-align: center;
+		line-height: 23px;
+		flex-shrink: 0;
+		font-size: 28px;
+		user-select: none;
+		font-family: monospace, sans-serif;
+		font-weight: bold;
+		margin-left: 20px;
 	}
 	&__title {
 		font-size: 24px;
 		line-height: 24px;
 	}
+	&__image {
+		width: 100%;
+		img {
+			@include fill-img(cover);
+		}
+
+	}
+	&__price {
+		background-color: $purple;
+		font-size: 18px;
+		display: inline-block;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		padding-top: 5px;
+		padding-bottom: 5px;
+		padding-right: 10px;
+		padding-left: 10px;
+		border-top-left-radius: 15px;
+		span {
+			font-size: 22px;
+			font-weight: bold;
+		}
+		&_empty {
+			background-color: transparent!important;
+			font-weight: bold;
+			position: relative;
+			margin-right: 10%;
+			font-size: 22px;
+		}
+	}
 	.button {
 		margin-top: 15px;
+	}
+	.button_none {
+		color: $text;
+		font-size: 18px;
 	}
 }
 
@@ -1643,7 +1942,7 @@ input[type='submit'] {
 		align-items: center;
 		padding-right: 20px;
 		padding-left: 20px;
-		background: linear-gradient(top, #ffffff, #d8d8d8);
+		background: linear-gradient(#ffffff, #d8d8d8);
 		border: 1px solid #cccccc;
 		overflow: hidden;
 		text-overflow: ellipsis;
@@ -1697,7 +1996,7 @@ input[type='submit'] {
 	&__item {
 		user-select: none;
 		cursor: pointer;
-		background: linear-gradient(top, white, #D8D8D8);
+		background: linear-gradient(white, #D8D8D8);
 		flex-grow: 1;
     border: 1px solid #CCC;
     padding-top: 10px;
@@ -1868,4 +2167,391 @@ input[type='submit'] {
 	}
 }
 
+.hero-box {
+	position: relative;
+	z-index: 1;
+	height: 290px;
+	&__image {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		z-index: 0;
+		img {
+			@include fill-img(cover);
+		}
+	}
+	&__text {
+		position: relative;
+		z-index: 1;
+		padding: 30px;
+		background-color: rgba(255,255,255,.4);
+		max-width: 500px;
+		height: 100%;
+	}
+	&__title {
+		font-size: 28px;
+		font-weight: normal;
+		line-height: 1.3;
+		color: $purple;
+		span {
+			font-size: 24px;
+		}
+	}
+	.check-list {
+		font-size: 14px;
+	}
+}
+
+.catalog-items-outer {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.catalog-item {
+	background-color: #fff;
+	border: 1px solid #ddd;
+	max-width: 310px;
+	&_small {
+		max-width: 230px;
+	}
+	&__image {
+		padding: 5px;
+		box-shadow: 0 0 5px rgba(0,0,0,.1);
+		img {
+			@include fill-img(contain);
+		}
+	}
+	&__bottom {
+		padding: 10px 15px;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+	&__name {
+		color: $purple;
+		font-size: 17px;
+		font-weight: bold;
+		width: 100%;
+		margin-bottom: 8px;
+	}
+	&__button {
+		background: #a722a3;
+    background: linear-gradient(0deg, #861783, #d933d4);
+    padding: 5px 10px;
+    height: auto;
+    max-width: max-content;
+    font-weight: bold;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0) inset, transparent 0 0 0;
+    border: 1px solid #861783;
+    &:hover {
+    	background: #a722a3;
+	    background: linear-gradient(0deg, #861783, #a722a3);
+    }
+	}
+	&__price {
+		background-color: $pink;
+		color: #fff;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-weight: bold;
+		text-shadow: 0 1px 1px #000;
+		position: relative;
+		padding-left: 5px;
+		padding-right: 5px;
+		span {
+			margin-right: 3px;
+			margin-left: 3px;
+			font-size: 28px;
+			line-height: 1;
+		}
+		&-outer {
+			display: flex;
+			position: relative;
+			&:before {
+				content: "";
+				width: 0;
+				height: 0;
+				border-top: 18px solid transparent;
+				border-right: 18px solid $pink;
+				border-bottom: 18px solid transparent;
+			}
+			&:after {
+				content: '';
+				width: 5px;
+				height: 5px;
+				background-color: #fff;
+				border-radius: 100%;
+				position: absolute;
+				top: calc(50% - 2px);
+				left: 11px;
+			}
+		}
+	}
+}
+
+.promo-header {
+	background-image: url(../img/bg-fbc_stand.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-position-x: 39%;
+	padding-bottom: 60px;
+	&::after {
+		content: '';
+	}
+}
+
+.promo-title {
+	font-family: 'BebasNeueBold', sans-serif;
+	font-weight: bold;
+	color: $red;
+	display: flex;
+	align-items: center;
+	line-height: 1;	
+	margin-bottom: 40px;	
+	&__number {
+		font-size: 250px;
+		letter-spacing: -10px;
+		margin-right: 10px;	
+		line-height: 200px;	
+	}
+	&__right {
+	}
+	&__item {
+		font-size: 140px;	
+		&_green {
+			font-size: 60px;
+			font-weight: normal;	
+			color: #87910f;		
+		}
+	}
+}
+
+.promo-description {
+	max-width: 500px;	
+	background-color: #fff;	
+	padding: 30px;	
+	border-radius: 10px;
+	box-shadow: 1px 4px 5px 0 rgba(0,0,0,.3);
+	&__header {
+		font-size: 30px;	
+		color: $red;	
+	}
+	.check-list {
+		li {
+			margin-bottom: 10px;	
+		}
+	}
+}
+
+.section-padding {
+	padding-top: 40px;	
+	padding-bottom: 40px;	
+}
+
+.spiked-top {
+	position: relative;
+	&:before {
+		content: '';
+		position: absolute;
+		background: url(../img/icons/bg-fbs_stand-footer.png) repeat-x top center;
+		left: 0;
+		top: -14px;
+		right: 0;
+		height: 14px;
+	}
+}
+
+.spiked-bottom {
+	position: relative;
+	&:after {
+		content: '';
+		position: absolute;
+		background: url(../img/icons/bg-fbs_stand-footer.png) repeat-x bottom center;
+		left: 0;
+		bottom: -14px;
+		right: 0;
+		height: 14px;
+	}
+}
+
+.white-section {
+	background-color: #fff;	
+}
+
+.reviews-wide {
+	&__title {
+		font-size: 14px;
+		text-transform: uppercase;
+		font-weight: bold;
+		margin-bottom: 5px;	
+	}
+	&__item {
+		margin-bottom: 30px;	
+	}
+}
+
+.link-black {
+	color: #000;
+	border-bottom: 1px solid;
+	font-size: 16px;	
+	&:hover {
+		border-bottom: none;
+		color: #000;	
+		text-decoration: none;
+	}
+}
+
+.stamps-catalog {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	&__item {
+		position: relative;
+		overflow: hidden;
+		display: flex;
+		max-width: 215px;
+		width: 100%;
+		flex-direction: column;
+    border: 1px solid #e0e0e0;
+    margin-top: 15px;
+    color: $text; 
+    &:hover {
+    	color: $text;
+    	text-decoration: none;
+    	.stamps-catalog__header {
+    		top: -60px;
+    	}
+    	.stamps-catalog__image {
+    		height: 100%;
+    		margin-top: -60px;
+    	}
+    	.stamps-catalog-slideup {
+    		top: 0;
+    		opacity: 1;
+    	}
+    }
+    &_wide {
+    	max-width: calc(50% - 4px);
+    	.stamps-catalog-slideup__inner {
+    		max-width: 250px;
+    	}
+    }
+	}
+	&__header {
+		position: relative;
+		display: flex;
+		justify-content: space-between;
+		text-transform: uppercase;
+		align-items: center;
+		font-weight: bold;
+		padding: 8px 12px;
+		font-size: 15px;
+		height: 60px;
+		top: 0;
+		transition: top 200ms ease;
+		.icon {
+			margin-right: 5px;
+		}
+		&_small {
+			font-size: 13px;
+		}
+	}
+	&__title {
+		span {
+			color: $pink;
+			font-weight: normal;
+		}
+	}
+	&__arrow {
+		position: relative;
+		width: 15px;
+		height: 15px;
+		&:before {
+			position: absolute;
+			border: 7px solid transparent;
+			border-left-color: #d80c8c;
+			content: '';
+			left: 0;
+		}
+	}
+	&__image {
+		background-color: #f1f1f1;
+		height: 175px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		transition: margin-top 200ms ease, height 100ms ease-in;
+		&_white {
+			background-color: transparent;
+		}
+	}
+}
+
+.stamps-catalog-slideup {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	background-color: rgba(255,255,255, .9);
+	top: 60px;
+	left: 0;
+	transition: top 200ms ease, opacity 100ms ease-in;
+	opacity: 0;
+	&__inner {
+		max-width: 145px;
+		text-align: center;
+	}
+	&__header {
+		color: $pink;
+		text-transform: uppercase;
+		font-weight: bold;
+		font-size: 17px;
+		padding-bottom: 3px;
+		margin-bottom: 5px;
+		border-bottom: 1px solid $text;
+		width: 100%;
+		text-align: center;
+	}
+	&__price {
+		color: $pink;
+		font-size: 18px;
+		font-weight: bold;
+		b {
+			font-size: 22px;
+		}
+	}
+}
+
+.big-catalog-item {
+	display: flex;
+	margin-bottom: 20px;
+	&:last-child {
+		margin-bottom: 0;
+	}
+	&__info {
+		margin-right: 20px;
+		padding: 30px;
+	}
+	&__name {
+		text-transform: uppercase;
+		margin-bottom: 10px;
+	}
+	.price {
+		margin-bottom: 10px;
+	}
+}
+
+.price {
+	color: $pink;
+	font-weight: bold;
+	font-size: 18px;
+	b {
+		font-size: 22px;
+	}
+}
 @import "media"; // Always at the end
